# Joi

./: .gitignore  AGENTS.md  Alt-Plan.md  CLAUDE.md  COMMANDS.md  COMMS-MATRIX.md  ENV-REFERENCE.md  FUN-IDEAS.md  Joi-architecture-v2.md  Joi-architecture-v3.md  Joi-architecture.md  Joi-threat-model.md  PROJECT_SUMMARY.md  Plan.md  README.md  SENSITIVE-CONFIG.md  WIND-CONFIG.md  agent-loop-design.md  api-contracts.md  backlog.md  commands.md  enterprise-scaling.md  env-reference.md  final-plan.md  memory-store-schema.md  policy-engine.md  project-summary.md  prompt-injection-defenses.md  reminder-engine.md  review-claude-2026-04-09.md  review-open-issues.md  review-sheldon-2026-03-31.md  review-sheldon-2026-04-09.md  review-wednesday-2026-03-31.md  review-wednesday-2026-04-09.md  sensitive-config.md  system-channel.md  tool-external-search.md  values.md  wind-architecture-v1.md  (+2 more)
diagrams/: access-matrix.html  joi-daily-cycle.html  query-pipeline.html  wind-workflow.html
execution/joi/: README.md  ingestion.py  notes.py  reminders.py  requirements.txt  run.sh  tasks.py
execution/shared/: __init__.py  hmac_core.py  pyproject.toml
ideas/: hermes-agent-ideas.md  joi-config-tui.md  memory-improvement-ideas.md  memory-scaling-ideas.md
sysprep/: README.md  maintenance.md
sysprep/joi/: config.yml  ollama-compose.yml  setup.sh  stage2.md  stage3.md  stage4.md  update.sh
sysprep/mesh/: config.yml  setup.sh  stage2.md  stage3.md  update.sh
sysprep/nebula/: nebula.service
sysprep/ntp/: setup.sh  update.sh
sysprep/router/: setup.sh  (+1 more)
tools/: smoke_search_v2.py
(+79 files in other folders)
